--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
 	"name": "gajus/paddy",
+	"version": "0.1.0",
 	"description": "Session based (flash) messaging utility.",
 	"keywords": ["flash", "message"],
 	"homepage": "https://github.com/gajus/paddy",
